--- a/public/posts/cloud-domain-setup.mdx
+++ b/public/posts/cloud-domain-setup.mdx
@@ -63,11 +63,11 @@ On this blog we use custom subdomains as follows, and getting each of these work
 
 | Subdomain | Points To |
 | --------- | --------- |
-| <span style={{color:'green'}}>**`login.authsamples.com`**</span> | Cognito URL |
-| <span style={{color:'green'}}>**`www.authsamples.com`**</span> | CloudFront URL for the SPA and other static web content |
-| <span style={{color:'green'}}>**`api.authsamples.com`**</span> | API Gateway URL for APIs |
-| <span style={{color:'green'}}>**`bff.authsamples.com`**</span> | API Gateway URL for the SPA's backend for frontend |
-| <span style={{color:'green'}}>**`mobile.authsamples.com`**</span> | CloudFront URL for mobile deep linking assets |
+| login.authsamples.com | Cognito URL |
+| www.authsamples.com | CloudFront URL for the SPA and other static web content |
+| api.authsamples.com | API Gateway URL for APIs |
+| bff.authsamples.com | API Gateway URL for the SPA's backend for frontend |
+| mobile.authsamples.com | CloudFront URL for mobile deep linking assets |
 
 ### Create a Wildcard SSL Certificate
 
