--- a/public/posts/cloud-hosting.mdx
+++ b/public/posts/cloud-hosting.mdx
@@ -8,10 +8,10 @@ I started by <Link href='/posts/oauth-infrastructure-setup'>Defining Base URLs</
 
 | Domain | Description |
 | ------ | ----------- |
-| <span style={{color:'green'}}>**https://www.authsamples.com**</span> | The base URL for Single Page Apps |
-| <span style={{color:'green'}}>**https://api.authsamples.com**</span> | The API gateway base URL |
-| <span style={{color:'green'}}>**https://login.authsamples.com**</span> | The authorization server base URL |
-| <span style={{color:'green'}}>**https://mobile.authsamples.com**</span> | Hosts assets for mobile apps |
+| https://www.authsamples.com | The base URL for Single Page Apps |
+| https://api.authsamples.com | The API gateway base URL |
+| https://login.authsamples.com | The authorization server base URL |
+| https://mobile.authsamples.com | Hosts assets for mobile apps |
 
 Each subdomain can be either a Serverless or cloud native endpoint. This blog follows a mix and match approach, depending on the cloud hosting option best meets our overall requirements.
 
