--- a/public/posts/desktop-app-coding-key-points.mdx
+++ b/public/posts/desktop-app-coding-key-points.mdx
@@ -228,10 +228,10 @@ The following main classes are used to handle OAuth and API logic. The strategy 
 
 | Class | Responsibilities |
 | ----- | ---------------- |
-| <span style={{color:'green'}}>**ApClient**</span> | A forwarder to initiate API operations. |
-| <span style={{color:'green'}}>**ApiService**</span> | Does the main work to send API requests with access tokens to the remote API endpoints. |
-| <span style={{color:'green'}}>**AuthenticatorClient**</span> | A forwarder to initiate login and token-related operations. |
-| <span style={{color:'green'}}>**AuthenticatorService**</span> | Does the main work to integrate with the AppAuth-JS library to trigger login and token requests, then handle responses. |
+| ApClient | A forwarder to initiate API operations. |
+| ApiService | Does the main work to send API requests with access tokens to the remote API endpoints. |
+| AuthenticatorClient | A forwarder to initiate login and token-related operations. |
+| AuthenticatorService | Does the main work to integrate with the AppAuth-JS library to trigger login and token requests, then handle responses. |
 
 ### Debugging HTTP Requests
 
