--- a/public/posts/desktop-app-how-to-run-the-code-sample.mdx
+++ b/public/posts/desktop-app-how-to-run-the-code-sample.mdx
@@ -102,16 +102,16 @@ With this configuration the app calls the following main URLs:
 
 | Component | URL(s) |
 | --------- | ------ |
-| <span style={{color:'green'}}>**API**</span> | *https://api.authsamples.com* |
-| <span style={{color:'green'}}>**Authorization Server**</span> | *https://login.authsamples.com* |
+| API | *https://api.authsamples.com* |
+| Authorization Server | *https://login.authsamples.com* |
 
 Note that the JSON configuration also includes details related to running a *Loopback Web Server* on the local computer:
 
 | Setting | Description |
 | ------- | ----------- |
-| <span style={{color:'green'}}>**Loopback Host Name**</span> | The hostname for the loopback HTTP server. |
-| <span style={{color:'green'}}>**Loopback Port Range**</span> | Port numbers used in OAuth redirect URIs. |
-| <span style={{color:'green'}}>**Post Login Page**</span> | Where to send the browser after a login. |
+| Loopback Host Name | The hostname for the loopback HTTP server. |
+| Loopback Port Range | Port numbers used in OAuth redirect URIs. |
+| Post Login Page | Where to send the browser after a login. |
 
 ### Step 5: OAuth Client Registration
 
