--- a/public/posts/error-handling-and-supportability.mdx
+++ b/public/posts/error-handling-and-supportability.mdx
@@ -378,10 +378,10 @@ You can reason about error handling as the following main steps, which I use in 
 
 | Step | Description |
 | ---- | ----------- |
-| <span style={{color:'green'}}>**Error Catching**</span> | Catching an error when it occurs, to include exception-specific context in error models. |
-| <span style={{color:'green'}}>**Error Throwing**</span> | Throwing an exception with error fields that you control, while keeping the stack trace of the original error. |
-| <span style={{color:'green'}}>**Error Logging**</span> | Logging the error information in a structured format, that is easy to query later. |
-| <span style={{color:'green'}}>**Error Responses**</span> | Returning the error details to an API client or displaying them to a user. |
+| Error Catching | Catching an error when it occurs, to include exception-specific context in error models. |
+| Error Throwing | Throwing an exception with error fields that you control, while keeping the stack trace of the original error. |
+| Error Logging | Logging the error information in a structured format, that is easy to query later. |
+| Error Responses | Returning the error details to an API client or displaying them to a user. |
 
 ### Error Catching and Throwing
 
