--- a/public/posts/how-to-run-the-ios-code-sample.mdx
+++ b/public/posts/how-to-run-the-ios-code-sample.mdx
@@ -35,9 +35,9 @@ We are using the following external dependencies:
 
 | Library | Usage |
 | ------- | ----- |
-| <span style={{color:'green'}}>**AppAuth**</span> | Does the OAuth based authentication work for the app |
-| <span style={{color:'green'}}>**Keychain Swift**</span> | Simplifies secure storage of OAuth tokens on devices |
-| <span style={{color:'green'}}>**SwiftUI-Tooltip**</span> | A utility to help display a tooltip containing user info |
+| AppAuth | Does the OAuth based authentication work for the app |
+| Keychain Swift | Simplifies secure storage of OAuth tokens on devices |
+| SwiftUI-Tooltip | A utility to help display a tooltip containing user info |
 
 These references were added via the *Swift Package Manager* and are built as libraries:
 
