--- a/public/posts/improved-spa-code-sample-overview.mdx
+++ b/public/posts/improved-spa-code-sample-overview.mdx
@@ -8,12 +8,12 @@ The updated SPA and API code sample has the following additional features:
 
 | Feature | Description |
 | ------- | ----------- |
-| <span style={{color:'green'}}>**Claims Based Authorization**</span> | The API provides a more complete and future-proof claims-based authorization solution. |
-| <span style={{color:'green'}}>**In-Memory Token Storage**</span> | The SPA now stores OAuth tokens only in-memory, to improve the browser security a little. |
-| <span style={{color:'green'}}>**Silent Token Renewal**</span> | The SPA now supports silent access token renewal using the SSO cookie. |
-| <span style={{color:'green'}}>**Multi Tab Browsing**</span> | The token renewal solution enables multi tab-browsing without noticeable user impact. |
-| <span style={{color:'green'}}>**Logout**</span> | The SPA implements a basic form of logout, including logout across multiple browser tabs. |
-| <span style={{color:'green'}}>**Real-World URLs**</span> | Both the SPA and API run on a development computer using real-world HTTPS URLs. |
+| Claims Based Authorization | The API provides a more complete and future-proof claims-based authorization solution. |
+| In-Memory Token Storage | The SPA now stores OAuth tokens only in-memory, to improve the browser security a little. |
+| Silent Token Renewal | The SPA now supports silent access token renewal using the SSO cookie. |
+| Multi Tab Browsing | The token renewal solution enables multi tab-browsing without noticeable user impact. |
+| Logout | The SPA implements a basic form of logout, including logout across multiple browser tabs. |
+| Real-World URLs | Both the SPA and API run on a development computer using real-world HTTPS URLs. |
 
 ### Updated Components
 
