--- a/public/posts/ios-code-sample-infrastructure.mdx
+++ b/public/posts/ios-code-sample-infrastructure.mdx
@@ -8,8 +8,8 @@ Our iOS sample uses 2 online domains, which we configured previously as part of 
 
 | Domain | Usage |
 | ------ | ----- |
-| <span style={{color:'green'}}>**mobile.authsamples.com**</span> | The domain name for mobile deep linking, which points to a Cloud location that hosts deep linking assets |
-| <span style={{color:'green'}}>**www.authsamples.com**</span> | We use the web domain for ad-hoc hosting of HTML files, including intermediate post-login and post-logout web pages |
+| mobile.authsamples.com | The domain name for mobile deep linking, which points to a Cloud location that hosts deep linking assets |
+| www.authsamples.com | We use the web domain for ad-hoc hosting of HTML files, including intermediate post-login and post-logout web pages |
 
 ### Intermediate Web Page Hosting
 
