--- a/public/posts/ios-code-sample-overview.mdx
+++ b/public/posts/ios-code-sample-overview.mdx
@@ -8,10 +8,10 @@ The following table summarises the main features of the code sample, some of whi
 
 | Feature | Description |
 | ------- | ----------- |
-| <span style={{color:'green'}}>**AppAuth Integration**</span> | We will implement the essential OpenID Connect behaviour by integrating the standard libraries |
-| <span style={{color:'green'}}>**Claimed HTTPS Schemes**</span> | The login result is returned to the app over HTTPS URLs, which is the most secure option according to security guidance |
-| <span style={{color:'green'}}>**Secure Token Storage**</span> | Tokens are stored securely on the device after login, so that users don’t need to authenticate on every app restart |
-| <span style={{color:'green'}}>**Deep Linking**</span> | The app also supports HTTPS Universal Links, so that users can bookmark locations within the app |
+| AppAuth Integration | We will implement the essential OpenID Connect behaviour by integrating the standard libraries |
+| Claimed HTTPS Schemes | The login result is returned to the app over HTTPS URLs, which is the most secure option according to security guidance |
+| Secure Token Storage | Tokens are stored securely on the device after login, so that users don’t need to authenticate on every app restart |
+| Deep Linking | The app also supports HTTPS Universal Links, so that users can bookmark locations within the app |
 
 ### Code Download
 
@@ -181,9 +181,9 @@ There are three scenarios where we will redirect the user on the ASWebAuthentica
 
 | Redirect Type | Description |
 | ------------- | ----------- |
-| <span style={{color:'green'}}>**Login**</span> | The user is interactively prompted to login |
-| <span style={{color:'green'}}>**Single Sign On**</span> | The user already has a valid session cookie and signs in automatically without a login screen |
-| <span style={{color:'green'}}>**Logout**</span> | The user’s session cookie is removed, with no prompt |
+| Login | The user is interactively prompted to login |
+| Single Sign On | The user already has a valid session cookie and signs in automatically without a login screen |
+| Logout | The user’s session cookie is removed, with no prompt |
 
 In each case, there needs to be a screen before invoking the deep link. You may find using the OpenID Connect *prompt=login* parameter on every login redirect is reliable. In this blog I instead use a custom intermediate page, partly because AWS Cognito does not yet support the *prompt* parameter.
 
@@ -205,9 +205,9 @@ ASWebAuthenticationSession based logins have usability benefits, but they also a
 
 | Test Case | Description |
 | --------- | ----------- |
-| <span style={{color:'green'}}>**Change Orientation**</span> | The user switches between portrait and landscape |
-| <span style={{color:'green'}}>**Reactivate App**</span> | The user switches to another app and then re-runs our app from the home screen via the app’s shortcut |
-| <span style={{color:'green'}}>**Deep Link**</span> | The user selects a deep link message from an email |
+| Change Orientation | The user switches between portrait and landscape |
+| Reactivate App | The user switches to another app and then re-runs our app from the home screen via the app’s shortcut |
+| Deep Link | The user selects a deep link message from an email |
 
 ### Where Are We?
 
