--- a/public/posts/net-core-code-sample-overview.mdx
+++ b/public/posts/net-core-code-sample-overview.mdx
@@ -14,8 +14,8 @@ During development the API runs as a standalone component. You can use either xU
 
 | Component | Base URL |
 | --------- | -------- |
-| <span style={{color:'green'}}>**API**</span> | *https://api.authsamples-dev.com:446* |
-| <span style={{color:'green'}}>**Mock Authorization Server**</span> | *https://login.authsamples-dev.com:447* |
+| API | *https://api.authsamples-dev.com:446* |
+| Mock Authorization Server | *https://login.authsamples-dev.com:447* |
 
 ### Prerequisite 1: Domain Setup
 
