--- a/public/posts/oauth-infrastructure-setup.mdx
+++ b/public/posts/oauth-infrastructure-setup.mdx
@@ -18,8 +18,8 @@ The ones that run locally use a domain called *authsamples-dev.com*. This is a f
 
 | Operating System | Path |
 | ---------------- | ---- |
-| <span style={{color:'green'}}>**Windows**</span> | c:\system32\drivers\etc\hosts |
-| <span style={{color:'green'}}>**macOS / Linux**</span> | /etc/hosts |
+| Windows | c:\system32\drivers\etc\hosts |
+| macOS / Linux | /etc/hosts |
 
 For the first code sample, you configure the following subdomains. By using real-world URLs on a development computer you can plan deployments and do early verification of their reliability:
 
@@ -37,8 +37,8 @@ A key point when starting with OAuth is to point your apps to HTTPS endpoints de
 
 | Type | Description |
 | ---- | ----------- |
-| <span style={{color:'green'}}>**Cloud Hosted**</span> | A cloud platform’s authorization server, such as those from AWS or Microsoft, with internet OAuth endpoints. |
-| <span style={{color:'green'}}>**Cloud Native**</span> | A docker based authorization server, with local OAuth endpoints and better visibility into how the authorization server works. |
+| Cloud Hosted | A cloud platform’s authorization server, such as those from AWS or Microsoft, with internet OAuth endpoints. |
+| Cloud Native | A docker based authorization server, with local OAuth endpoints and better visibility into how the authorization server works. |
 
 Either provides a convenient option when getting started with OAuth. This blog shows how to integrate user-facing apps and APIs, using portable code. Your applications are then compliant with any standards-based authorization server.
 
@@ -168,8 +168,8 @@ A key objective should be to use security libraries so that you integrate OAuth 
 
 | Area | Description |
 | ---- | ----------- |
-| <span style={{color:'green'}}>**Clients**</span> | Getting logins working in a user friendly way, along with related operations such as user creation and password recovery. |
-| <span style={{color:'green'}}>**APIs**</span> | Protecting data with OAuth, using access token validation and claims-based authorization. |
+| Clients | Getting logins working in a user friendly way, along with related operations such as user creation and password recovery. |
+| APIs | Protecting data with OAuth, using access token validation and claims-based authorization. |
 
 ### Step 11: Clarify Requirements
 
