--- a/public/posts/serverless-api-overview.mdx
+++ b/public/posts/serverless-api-overview.mdx
@@ -8,11 +8,11 @@ The main behaviour to aim for is summarised below, where code is identical to th
 
 | Behaviour | Description |
 | --------- | ----------- |
-| <span style={{color:'green'}}>**Zero Trust**</span> | Our API performs JWT access token validation on every request, via a JOSE security library |
-| <span style={{color:'green'}}>**Extensible Authorization**</span> | Our API is in full control of authorization values from both the access token and other sources |
-| <span style={{color:'green'}}>**Supportable**</span> | Our API will use this blog’s designs for logging and error handling to ensure good technical support qualities |
-| <span style={{color:'green'}}>**Scalable**</span> | The same coding techniques, and any common code, can be used for many APIs in a software platform |
-| <span style={{color:'green'}}>**Productive**</span> | The API code is modern and portable across mainstream languages |
+| Zero Trust | Our API performs JWT access token validation on every request, via a JOSE security library |
+| Extensible Authorization | Our API is in full control of authorization values from both the access token and other sources |
+| Supportable | Our API will use this blog’s designs for logging and error handling to ensure good technical support qualities |
+| Scalable | The same coding techniques, and any common code, can be used for many APIs in a software platform |
+| Productive | The API code is modern and portable across mainstream languages |
 
 ### Preferred Local Setup
 
