--- a/public/posts/updated-api-coding-key-points.mdx
+++ b/public/posts/updated-api-coding-key-points.mdx
@@ -8,8 +8,8 @@ In the first sample’s <Link href='/posts/basicapi-codingkeypoints'>API Code De
 
 | Responsibility | Description |
 | -------------- | ----------- |
-| <span style={{color:'green'}}>**Authenticate Requests**</span> | Verify incoming access tokens and return a 401 error response for invalid tokens. |
-| <span style={{color:'green'}}>**Set up Authorization**</span> | Read claims needed for authorization, then pass them through to the API’s business logic. |
+| Authenticate Requests | Verify incoming access tokens and return a 401 error response for invalid tokens. |
+| Set up Authorization | Read claims needed for authorization, then pass them through to the API’s business logic. |
 
 The updated API implements <Link href='/posts/jwt-access-token-validation'>JWT Access Token Validation</Link> in the same way as the first code sample, but now also implements this blog's <Link href='/posts/api-authorization-design'>API Authorization Behaviour</Link>. This starts with enforcing its required scope:
 
