--- a/public/posts/web-architecture-goals.mdx
+++ b/public/posts/web-architecture-goals.mdx
@@ -32,8 +32,8 @@ If an app has XSS vulnerabilities, then an attacker may be able to access secure
 
 OpenID Connect can provide multiple ways for users to sign in to an SPA, and this can include options that are both user friendly and secure. In addition, an SPA should be in full control of its usability behaviour:
 
-- <span style={{color:'green'}}>**Session Behaviour**</span>: the UI should be in control of navigation and expiry events rather than being abruptly redirected.
-- <span style={{color:'green'}}>**Multi-Tab Browsing**</span>: the user should be able to use multiple browser tabs for the same application.
+- Session Behaviour: the UI should be in control of navigation and expiry events rather than being abruptly redirected.
+- Multi-Tab Browsing: the user should be able to use multiple browser tabs for the same application.
 
 ### Good Search Results
 
@@ -57,8 +57,8 @@ Portability is often overlooked, but it is common to want to keep your options o
 
 | Aspect | Description |
 | ------ | ----------- |
-| <span style={{color:'green'}}>**Portable Apps**</span> | Implement OpenID Connect in the SPA in a standard way rather than being locked into one authorization server. |
-| <span style={{color:'green'}}>**Portable Hosting**</span> | You should only need to upload web static content to a CDN to deploy SPAs, so avoid designs that prevent this. |
+| Portable Apps | Implement OpenID Connect in the SPA in a standard way rather than being locked into one authorization server. |
+| Portable Hosting | You should only need to upload web static content to a CDN to deploy SPAs, so avoid designs that prevent this. |
 
 ### This Blog's SPA Code Samples
 
