--- a/public/posts/web-technology-setup.mdx
+++ b/public/posts/web-technology-setup.mdx
@@ -8,9 +8,9 @@ Single page applications should focus on frontend-only concerns. The goal should
 
 The main ingredient of an SPA is its logic. Choose a language that remains close to the browser's default language, to reduce complexity. Also use clean code and a separation of concerns. I use TypeScript since I like the extensions to JavaScript in these areas:
 
-- <span style={{color:'green'}}>**Expressive Types**</span> including interfaces and private class members.
-- <span style={{color:'green'}}>**Data Contracts**</span> can represent API requests and responses.
-- <span style={{color:'green'}}>**Convenient Refactoring**</span> when you rename or removed items.
+- Expressive types including interfaces and private class members.
+- Data contracts can represent API requests and responses.
+- Convenient refactoring when you rename or removed items.
 
 ### Web Development Pipeline
 
@@ -18,12 +18,12 @@ I summarise the main stages of the web development pipeline in the below table. 
 
 | Stage	| Description |
 | ----- | ----------- |
-| <span style={{color:'green'}}>**Download Dependencies**</span> | Before you write any real code you typically need to download libraries. |
-| <span style={{color:'green'}}>**Write Code**</span> | To write TypeScript code you need to import third party libraries and use their classes and functions. |
-| <span style={{color:'green'}}>**Execute Tasks**</span> | You sometimes need to execute arbitrary tasks as part of development, such as code quality checks. |
-| <span style={{color:'green'}}>**Build Code**</span> | You need to build code so that it runs in browsers, which involves compiling TypeScript. |
-| <span style={{color:'green'}}>**Execute Code**</span> | You execute compiled code in the browser, which is different to the code you develop. |
-| <span style={{color:'green'}}>**Decompile Code**</span> | When there is a problem, or to support debugging, you want to get back to the original TypeScript code. |
+| Download Dependencies | Before you write any real code you typically need to download libraries. |
+| Write Code | To write TypeScript code you need to import third party libraries and use their classes and functions. |
+| Execute Tasks | You sometimes need to execute arbitrary tasks as part of development, such as code quality checks. |
+| Build Code | You need to build code so that it runs in browsers, which involves compiling TypeScript. |
+| Execute Code | You execute compiled code in the browser, which is different to the code you develop. |
+| Decompile Code | When there is a problem, or to support debugging, you want to get back to the original TypeScript code. |
 
 ### Downloading Dependencies: Package Manager
 
