--- a/public/posts/final-nodeapi-coding-key-points.mdx
+++ b/public/posts/final-nodeapi-coding-key-points.mdx
@@ -135,10 +135,10 @@ The role of each of the API’s middleware classes is summarised below:
 
 | Middleware Class | Responsibility |
 | ---------------- | -------------- |
-| <span style={{color:'green'}}>**LoggerMiddleware**</span> | Manage the log entry for each API request, then log request and response details |
-| <span style={{color:'green'}}>**AuthorizerMiddleware**</span> | OAuth processing, getting data needed for request authorization, and adding identity details to logs |
-| <span style={{color:'green'}}>**CustomHeaderMiddleware**</span> | Allow advanced client side testing of APIs via custom headers |
-| <span style={{color:'green'}}>**UnhandledExceptionHandler**</span> | A central place for handling exceptions, adding error details to logs, and producing the client error response |
+| LoggerMiddleware | Manage the log entry for each API request, then log request and response details |
+| AuthorizerMiddleware | OAuth processing, getting data needed for request authorization, and adding identity details to logs |
+| CustomHeaderMiddleware | Allow advanced client side testing of APIs via custom headers |
+| UnhandledExceptionHandler | A central place for handling exceptions, adding error details to logs, and producing the client error response |
 
 ### Controller Annotations
 
