--- a/public/posts/ios-setup.mdx
+++ b/public/posts/ios-setup.mdx
@@ -51,10 +51,10 @@ The AppAuth settings are summarised below:
 
 | Field | Value |
 | ----- | ----- |
-| <span style={{color:'green'}}>**Client ID**</span> | 53osemtot8tp3n3qct5r2hijk3 |
-| <span style={{color:'green'}}>**Redirect URI**</span> | net.openid.appauthdemo:/oauth2redirect |
-| <span style={{color:'green'}}>**Scope**</span> | openid email profile |
-| <span style={{color:'green'}}>**Issuer URI**</span> | *https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9* |
+| Client ID | 53osemtot8tp3n3qct5r2hijk3 |
+| Redirect URI | net.openid.appauthdemo:/oauth2redirect |
+| Scope | openid email profile |
+| Issuer URI | *https://cognito-idp.eu-west-2.amazonaws.com/eu-west-2_CuhLeqiE9* |
 
 ### Step 6: Update OAuth Client Settings
 
