--- a/public/posts/spa-back-end-for-front-end.mdx
+++ b/public/posts/spa-back-end-for-front-end.mdx
@@ -14,9 +14,9 @@ At a higher level, there were three main requirements I wanted to meet for this 
 
 | Requirement | Description |
 | ----------- | ----------- |
-| <span style={{color:'green'}}>**Strong Browser Security**</span> | Follow current best practices, with only the latest and most secure cookies used in the browser. |
-| <span style={{color:'green'}}>**Globally Equal Performance**</span> | Deploy the SPA to a content delivery network, so that web latency is roughly the same at any global location. |
-| <span style={{color:'green'}}>**Pure SPA Development**</span> | Web developers work productively on modern frontends, with small code bases and no security plumbing. |
+| Strong Browser Security | Follow current best practices, with only the latest and most secure cookies used in the browser. |
+| Globally Equal Performance | Deploy the SPA to a content delivery network, so that web latency is roughly the same at any global location. |
+| Pure SPA Development | Web developers work productively on modern frontends, with small code bases and no security plumbing. |
 
 The cookie requirement is an awkward one for SPAs. When developing SPAs and APIs you should not need to return to older website technology stacks. The key technique to maintain an SPA architecture and meet all three requirements is to use API-driven cookie issuing,
 
@@ -54,11 +54,11 @@ I designed the following URLs for the deployed AWS environment. The */spa* path 
 
 | Component | Base URL |
 | --------- | -------- |
-| <span style={{color:'green'}}>**SPA**</span> | *https://www.authsamples.com/spa/* |
-| <span style={{color:'green'}}>**Investments API**</span> | *https://api.authsamples.com/investments* |
-| <span style={{color:'green'}}>**Investments API Web Route**</span> | *https://bff.authsamples.com/investments* |
-| <span style={{color:'green'}}>**OAuth Agent**</span> | *https://bff.authsamples.com/oauth-agent* |
-| <span style={{color:'green'}}>**Authorization Server**</span> | *https://login.authsamples.com* |
+| SPA | *https://www.authsamples.com/spa/* |
+| Investments API | *https://api.authsamples.com/investments* |
+| Investments API Web Route | *https://bff.authsamples.com/investments* |
+| OAuth Agent | *https://bff.authsamples.com/oauth-agent* |
+| Authorization Server | *https://login.authsamples.com* |
 
 ### Web Development Environment
 
@@ -66,11 +66,11 @@ Even more important than deployed environments is the local development environm
 
 | Component | Base URL |
 | --------- | -------- |
-| <span style={{color:'green'}}>**SPA**</span> | *https://www.authsamples-dev.com/spa/* |
-| <span style={{color:'green'}}>**Investments API**</span> | *https://api.authsamples.com/investments* |
-| <span style={{color:'green'}}>**Investments API Web Route**</span> | *https://bff.authsamples-dev.com/investments* |
-| <span style={{color:'green'}}>**OAuth Agent**</span> | *https://bff.authsamples-dev.com/oauth-agent* |
-| <span style={{color:'green'}}>**Authorization Server**</span> | *https://login.authsamples.com* |
+| SPA | *https://www.authsamples-dev.com/spa/* |
+| Investments API | *https://api.authsamples.com/investments* |
+| Investments API Web Route | *https://bff.authsamples-dev.com/investments* |
+| OAuth Agent | *https://bff.authsamples-dev.com/oauth-agent* |
+| Authorization Server | *https://login.authsamples.com* |
 
 For local development URLs I used a hostname suffix of *-dev*. The *authsamples-dev.com* site represents components that run on the local computer. Yet the *bff* subdomain runs in AWS, solely to support local SPA development. For the web origin and API routes to work together, you must alias the web domain to *localhost* in your computer’s hosts file:
 
@@ -88,11 +88,11 @@ It gets more complicated when you need to run both the SPA and APIs locally, whi
 
 | Component | Base URL |
 | --------- | -------- |
-| <span style={{color:'green'}}>**SPA**</span> | *https://www.authsamples-dev.com/spa/* |
-| <span style={{color:'green'}}>**Investments API**</span> | *https://api.authsamples-dev.com:446/investments* |
-| <span style={{color:'green'}}>**Investments API Web Route**</span> | *https://bfflocal.authsamples-dev.com:444/investments* |
-| <span style={{color:'green'}}>**OAuth Agent**</span> | *https://bfflocal.authsamples-dev.com:444/oauth-agent* |
-| <span style={{color:'green'}}>**Authorization Server**</span> | *https://login.authsamples.com* |
+| SPA | *https://www.authsamples-dev.com/spa/* |
+| Investments API | *https://api.authsamples-dev.com:446/investments* |
+| Investments API Web Route | *https://bfflocal.authsamples-dev.com:444/investments* |
+| OAuth Agent | *https://bfflocal.authsamples-dev.com:444/oauth-agent* |
+| Authorization Server | *https://login.authsamples.com* |
 
 Developers must then also add the *bfflocal* subdomain to the hosts file. You can then run a more complete local setup, which is useful for developers who want to focus on end-to-end API and client journeys.
 
